# KowinWm

./: Cargo.toml  README.md
src/: action.rs  config.rs  input.rs  main.rs  render.rs  state.rs  udev.rs  workspaces.rs
src/backend/: mod.rs  udev.rs
src/handlers/: input.rs  mod.rs  xdg.rs  xwayland.rs
src/shaders/: mod.rs
src/udev/: device.rs  mod.rs  surface.rs  udev_wrong_try.rs
src/utils/: action.rs  config.rs  cursor.rs  grab.rs  layout.rs  logs.rs  mod.rs  workspaces.rs
src/utils/render/: border.frag  border.rs  mod.rs
