[package]
name = "kovinwm"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing="0.1.41"
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git", rev = "fb4fcd18"}
xcursor = "0.3.10"
serde={version="1.0.228", features=["derive"]}
toml={ version="0.9", features=["preserve_order"] }
indexmap ={ version = "2.12.1", features=["serde"]}


[dependencies.smithay]
version="0.7.0"
default-features = false
features = [
    "wayland_frontend",
    "desktop",
    "backend_session_libseat",
    "backend_drm",
    "renderer_multi",
    "renderer_glow",
    "backend_gbm",
    "backend_udev",
    "backend_egl",
    "backend_libinput",
    "use_system_lib",
]


[features]
default=[]
xwayland = ["smithay/xwayland"]
